force-app/main/default/objects/Vehicle_Dealer__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores authorized dealer info</description>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Vehicle Dealers</relationshipLabel>
    <relationshipName>Vehicle_Dealers</relationshipName>
    <type>Lookup</type>
</CustomField>